--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
   "description": "A simple Node app built on Express, instantly up and running.",
   "main": "server.js",
   "scripts": {
-    "start": "node -r dotenv/config server.js"
+    "start": "node -r dotenv/config server.js",
+    "dev": "nodemon index"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "body-parser": "^1.19.0",
     "dotenv": "^8.0.0",
+    "ejs": "^3.1.6",
     "express": "^4.16.4",
+    "moment": "^2.29.2",
     "morgan": "^1.9.1",
     "request": "^2.88.0"
   },
@@ -27,5 +31,8 @@
     "node",
     "glitch",
     "express"
-  ]
+  ],
+  "devDependencies": {
+    "nodemon": "^2.0.15"
+  }
 }
