feat: push to new repo

--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
   "version": "0.0.1",
   "description": "A simple Node app built on Express, instantly up and running.",
   "main": "server.js",
+  "jest": {
+    "verbose": true
+  },
   "scripts": {
     "start": "node -r dotenv/config server.js",
+    "test": "jest --detectOpenHandles",
     "dev": "nodemon index"
   },
   "dependencies": {
@@ -18,6 +22,7 @@
     "express": "^4.16.4",
     "moment": "^2.29.2",
     "morgan": "^1.9.1",
+    "nodemailer": "^6.7.3",
     "request": "^2.88.0"
   },
   "engines": {
@@ -33,6 +38,8 @@
     "express"
   ],
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "jest": "^27.5.1",
+    "nodemon": "^2.0.15",
+    "supertest": "^6.2.2"
   }
 }
